feat: first demo backend java backend project-service